[package]
name = "monitor-rs"
version = "0.1.0"
edition = "2024"

[package.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install -y libdbus-1-dev:$CROSS_DEB_ARCH",
]

[dependencies]
btleplug = "0.11.7"
futures = "0.3.31"
log = { version = "0.4.27", features = ["kv"] }
pretty_env_logger = "0.5.0"
rumqttc = "0.24.0"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8.20"
