[package]
name = "monitor-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[package.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install -y libdbus-1-dev:$CROSS_DEB_ARCH",
]

[dependencies]
anyhow = "1.0.97"
btleplug = "0.11.7"
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
log = "0.4.27"
mac_address = { version = "1.1.8", features = ["serde"] }
pretty_env_logger = "0.5.0"
rumqttc = "0.25.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "process", "rt-multi-thread", "sync"] }
toml = "1.0.0"
